[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "specialized-turbo"
version = "0.1.0"
description = "Python library for communicating with Specialized Turbo e-bikes over Bluetooth Low Energy"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Jamie Magee" }]
keywords = ["specialized", "turbo", "vado", "levo", "creo", "ebike", "ble", "bluetooth"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "bleak>=0.21.0",
]

[project.optional-dependencies]
cli = ["click>=8.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.scripts]
specialized-turbo = "specialized_turbo.cli:main"

[project.urls]
Homepage = "https://github.com/JamieMagee/specialized-turbo"
Repository = "https://github.com/JamieMagee/specialized-turbo"
Issues = "https://github.com/JamieMagee/specialized-turbo/issues"
Documentation = "https://github.com/JamieMagee/specialized-turbo/blob/main/docs/protocol.md"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
